fix spacing on mail chimp form

--- a/assets/_sass/main.scss
+++ b/assets/_sass/main.scss
@@ -267,6 +267,11 @@ em {
     font-weight: normal;
 }
 
+// MailChimp form submission confirmation
+.response {
+    margin-bottom: 20px;
+}
+
 .sponsors__row {
     display: flex;
     justify-content: center;
